添加了学过的activity和学过的课程xml文件，并且在manifest中添加了activity intent

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,15 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".LearnedCourseActivity"
+            android:label="LearnedCourseActivity">
+            <intent-filter>
+                <action android:name="LearnedCourseActivity" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
