--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Changeimage"></activity>
+        <activity android:name=".SettingActivity"></activity>
+        <activity android:name=".Changeimage" />
         <activity android:name=".personal" />
         <activity android:name=".Login" />
         <activity android:name=".MainActivity">
